<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="eula_link"><a href='http://www.wrld3d.com/terms-of-service'>EULA</a></string>
    <string name="privacy_link"><a href='http://www.wrld3d.com/privacy'>Privacy Policy</a></string>
    <string name="legal_link"><a href='http://www.wrld3d.com/legal'>Legal</a></string>
    <string name="team_link"><a href='http://www.wrld3d.com/company/about-us'>Team</a></string>
    
    <string name="basic_example_label">search</string>
    <string name="about_page_title">About</string>
    <string name="about_page_developer">Developed by</string>
    <string name="searchbox_query_hint">Search the WRLD</string>

    <!-- Validation Strings -->
    <string name="validation_username">smolly</string>
    <string name="validation_password">g3n3r4l53cr3t</string>
    <string name="validation_title_text">Phone Number Verification</string>
    <string name="validation_verify_button_text">Verify</string>
    <string name="validation_validate_button_text">Validate</string>
    <string name="validation_resend_text">Validate</string>

    <string name="validation_title">Login</string>
    <string name="validation_enter_credentials_text">Enter your email and password</string>
    <string name="validation_enter_code_text">Enter your PIN</string>
    <string name="validation_phone_hint_text">Phone Number</string>
    <string name="validation_done_text">Done</string>
    <string name="validation_success_text">Login Successful!</string>
    <string name="validation_already_verified">Your number is already verified!</string>
    <string name="validation_resend_code_text"><u>Resend?</u></string>
    <string name="validation_code_expire_text">Your PIN will expire in </string>
    <string name="validation_code_error_text">Incorrect PIN entered!</string>
    <string name="validation_code_attempts_exceed_error_text">Number of attempts exceeded!\nRetry in few minutes</string>
    <string name="validation_go_back_text">Go Back</string>
    <string name="validation_change_number_text"><u>CHANGE NUMBER</u></string>
    <string name="validation_code_getting_text">You should be getting a text message shortly\n+97-XXXXXX855</string>
    <string name="validation_phone_number_error_text">Entered invalid phone number</string>

    <string name="options_title">Options</string>
    <string name="options_view_stream_wifi_only_togglebutton_text">Stream over Wi-fi only</string>
    <string name="options_view_cache_enabled_togglebutton_text">Enable data caching on device</string>
    <string name="options_view_clear_cache_button_text">Clear cached map data</string>
    <string name="options_view_playtutorial_button_text">Play tutorial again</string>
    <string name="options_view_sign_out_button_text">Sign out</string>
    <string name="options_view_ok_button_text">OK</string>
    <string name="options_view_replay_title">Replay Tutorials</string>
    <string name="options_view_replay_message">The help panels will be visible again when you enter or leave an indoor map.</string>

    <string name="cache_clear_title">Remove Stored Data</string>
    <string name="cache_clear_warning">Warning!</string>
    <string name="cache_clear_confirm">Are you sure you want to remove all stored data?</string>
    <string name="cache_clear_working">Please wait, this may take a while...</string>
    <string name="cache_clear_done">Map data deleted from device.</string>

    <string name="sign_out_title">Sign out</string>
    <string name="sign_out_warning">Warning!</string>
    <string name="sign_out_confirm">Are you sure you want to sign out from this device?</string>
    <string name="sign_out_working">Please wait, this may take a while...</string>
    <string name="sign_out_done">Signed out successfully</string>
    
    <string name="header_address">Address</string>
    <string name="header_phone">Phone</string>
    <string name="header_web">Web</string>
    <string name="header_preview">Preview</string>
    <string name="header_description">Description</string>
    <string name="header_image">Image</string>
    <string name="header_country">Country</string>
    <string name="header_tags">Tags</string>
    <string name="header_reviews">Reviews</string>
    <string name="header_availability">Availability</string>
    
    <string name="content_desc_compass_lock">This icon represents that the compass is now locked to the device\'s heading.</string>
    <string name="content_desc_tag_icon">This icon represents a specific place of interest tag</string>
    
    <string name="icon_me">Drag or tap this tab to open the User Options menu</string>
    <string name="icon_search">Drag or tap this tab to open the Search and Environment menu</string>
    
    <string name="eegeo_logo">Eegeo company logo</string>
    
    <string name="pin_confirmation_title">Drag the marker to place your pin</string>
    <string name="poi_creation_details_terms_conditions">(Terms &amp; Conditions)</string>
    <string name="poi_creation_details_share">Share</string>
    <string name="poi_creation_details_title_hint">Name your pin...</string>
    <string name="poi_creation_details_description_hint">Tell us about your pin...</string>
    <string name="poi_creation_details_image">The current image representing your Point of Interest.</string>
    <string name="my_pin_details_icon">Icon for My Pin details dialog box</string>
    
    <string name="placeholder">Lorem ipsum dolor sit amet.</string>
    <string name="settings_header">Settings</string>
    <string name="required_camera_permission_text">Please provide access to both Camera and Storage permissions for this functionality to work.</string>
    <string name="required_read_device_state_permission_msg">Please enable read device state permission for the app to uniquely identify your device</string>
    <string name="required_location_permission_text">Please provide access to Location permission for this functionality to work.</string>
    <string name="ok_text">Ok</string>
    <string name="cancel_text">Cancel</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>

    <string name="pin_default_title">Untitled Pin</string>
    
    <string name="initial_ux_welcome_title">Welcome</string>
    <string name="initial_ux_welcome_description">Design your maps at wrld3d.com</string>
    <string name="initial_ux_search_dialog_title">Search</string>
    <string name="initial_ux_search_dialog_description">Find places fast or just\nstart exploring.</string>
    <string name="initial_ux_compass_dialog_title">Compass</string>
    <string name="initial_ux_compass_dialog_description">Locate me.\nLock rotation to\ncompass.</string>
    <string name="initial_ux_mapmode_dialog_title">Map Mode</string>
    <string name="initial_ux_mapmode_dialog_description">Simple 2D View.</string>
    <string name="initial_ux_pincreation_dialog_title">Drop Pin</string>
    <string name="initial_ux_pincreation_dialog_description">Drop a pin on map\nto bookmark a place.</string>
    <string name="eegeo_app_base">Android-MEA</string>

    <string name="search_closest_label">Show me the closest...</string>
    <string name="nav_reroute_dialog_label_text">End Navigation?</string>
    <string name="nav_reroute_dialog_btn_text_no">No</string>
    <string name="nav_reroute_dialog_btn_subtext_no">Update Route</string>
    <string name="nav_reroute_dialog_btn_text_yes">Yes</string>
    <string name="nav_reroute_dialog_btn_subtext_yes">End Navigation</string>
    <string name="nav_search_hint_text">Tap to drop pin at your\ndesired location.</string>
    <string name="nav_calculating_route_label_text">Calculating Route...</string>

</resources>
