<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/options_view"
              android:layout_width="320dp"
              android:layout_height="wrap_content"
              android:layout_centerInParent="true"
              android:background="@color/white"
              android:orientation="vertical">

    <!-- Title bar -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:paddingLeft="20dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/options_view_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/options_title"
            android:textColor="@color/darksteelblue"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/options_view_close_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_pin_close_states"/>

    </RelativeLayout>

    <!--  Separator -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/darksteelblue"/>

    <!--  Scrolling content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarFadeDuration="0"
        android:scrollbarSize="@dimen/scrollbars_width"
        android:scrollbarThumbVertical="@color/scrollbars">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:rowCount="5">

            <TextView
                android:id="@+id/options_view_stream_wifi_only_label"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="center_vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/options_view_stream_wifi_only_togglebutton_text"
                android:textColor="@color/darkergrey"
                android:textSize="12sp"/>

            <ToggleButton
                android:id="@+id/options_view_stream_wifi_only_togglebutton"
                android:layout_width="36dp"
                android:layout_height="18dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="center_vertical|right"
                android:background="@drawable/slider_checkbox_states"
                android:checked="false"
                android:textOff=""
                android:textOn=""/>

            <TextView
                android:id="@+id/options_view_cache_enabled_label"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="center_vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/options_view_cache_enabled_togglebutton_text"
                android:textColor="@color/darkergrey"
                android:textSize="12sp"/>

            <ToggleButton
                android:id="@+id/options_view_cache_enabled_togglebutton"
                android:layout_width="36dp"
                android:layout_height="18dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="center_vertical|right"
                android:background="@drawable/slider_checkbox_states"
                android:checked="true"
                android:textOff=""
                android:textOn=""/>

            <TextView
                android:id="@+id/options_view_clear_cache_label"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="center_vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/options_view_clear_cache_button_text"
                android:textColor="@color/darkergrey"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/options_view_clear_cache_button"
                android:layout_width="36dp"
                android:layout_height="18dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="center_vertical|right"
                android:background="@drawable/button_ok_states"
                android:text="@string/options_view_ok_button_text"
                android:textColor="@color/white"
                android:textSize="10sp"/>

            <TextView
                android:id="@+id/options_view_playtutorial_label"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_gravity="center_vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/options_view_playtutorial_button_text"
                android:textColor="@color/darkergrey"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/options_view_playtutorial_button"
                android:layout_width="36dp"
                android:layout_height="18dp"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_gravity="center_vertical|right"
                android:background="@drawable/button_ok_states"
                android:text="@string/options_view_ok_button_text"
                android:textColor="@color/white"
                android:textSize="10sp"/>

        </GridLayout>

    </ScrollView>

    <TextView
        android:id="@+id/options_view_sign_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/transparent"
        android:gravity="left"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/options_view_sign_out_button_text"
        android:textColor="@color/darksteelblue"
        android:textSize="12sp"/>

</LinearLayout>
