<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/gold"
        android:gravity="center"
        android:text="@string/validation_title"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:weightSum="2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/validation_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="8">

            <TextView
                android:id="@+id/status_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:text="@string/validation_enter_code_text"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:textColor="@color/evendarkergrey"
                android:textSize="16dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/code_1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/validation_num_dash"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:minEms="2"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/evendarkergrey"
                    android:textSize="22sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/code_2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/validation_num_dash"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:minEms="2"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/evendarkergrey"
                    android:textSize="22sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/code_3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/validation_num_dash"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:minEms="2"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/evendarkergrey"
                    android:textSize="22sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/code_4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/validation_num_dash"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:minEms="2"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/evendarkergrey"
                    android:textSize="22sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                android:id="@+id/error_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5"
                android:gravity="center"
                android:minLines="2"
                android:text="@string/validation_code_error_text"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14dp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/validation_code_expire_text"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textColor="@color/evendarkergrey"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/expiry_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:gravity="center"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textColor="@color/evendarkergrey"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/change_number_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/validation_resend_code_text"
                    android:textColor="@color/gold"
                    android:textSize="16sp"/>
            </LinearLayout>


            <EditText
                android:id="@+id/hidden_edit_text"
                android:layout_width="1px"
                android:layout_height="1px"
                android:layout_weight="0"
                android:background="@color/transparent"
                android:focusable="true"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="@color/transparent"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center">

                    <ImageButton
                        android:id="@+id/confirm_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/validation_verify_btn_states"/>

                    <TextView
                        android:id="@+id/confirm_button_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/validation_validate_button_text"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/logo"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>