<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/validation_title"
        android:gravity="center"
        android:text="@string/validation_title"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="8">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="4"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/validation_logo"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2.4">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_above="@+id/number_container"
                android:layout_alignStart="@+id/number_container"
                android:layout_alignEnd="@+id/number_container"
                android:gravity="center"
                android:text="@string/validation_enter_credentials_text"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:textColor="@color/evendarkergrey"
                android:textSize="16dp"/>

            <LinearLayout
                android:id="@+id/number_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email_input_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/validation_typearea"
                    android:gravity="center_vertical"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text=""
                    android:textColorHint="@color/evendarkergrey"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/password_input_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/validation_typearea"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:hint="Password"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text=""
                    android:textColorHint="@color/evendarkergrey"
                    android:textSize="16sp"/>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/error_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.5"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/validation_code_error_text"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14dp"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/verify_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/validation_verify_btn_states"/>

                    <TextView
                        android:id="@+id/verify_button_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/validation_verify_button_text"
                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>